--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Program Untuk Mengatur Stock Secara Otomatis",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cd src/ && node index.js"
@@ -21,6 +22,10 @@
   },
   "homepage": "https://github.com/ps08012002/Program_Stock#readme",
   "dependencies": {
+    "@prisma/client": "^6.10.0",
     "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "prisma": "^6.10.0"
   }
 }
