--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/ps08012002/Program_Stock#readme",
   "dependencies": {
     "@prisma/client": "^6.10.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "nodemon": "^3.1.10"
   },
