--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cd src/ && nodemon index.js"
+    "start": "cd src/ && nodemon index.js",
+    "seed": "node prisma/seed.mjs"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,7 @@
     "nodemon": "^3.1.10"
   },
   "devDependencies": {
+    "@types/node": "^24.0.7",
     "prisma": "^6.10.0"
   }
 }
